--- a/index.html
+++ b/index.html
@@ -71,13 +71,13 @@
                 <h3 class="">Name/Number</h3>
             </div>
             <div class="messages">
-                <div class="message sent">
-                    <p class="messageBody">I have ebola</p>
+                <div class="message received">
+                    <p class="messageBody">I was attacked on the way along the high street today</p>
                     <p class="messageMeta">10:43</p>
                 </div>
-                <div class="message received">
-                    <p class="messageBody">I have ebola</p>
-                    <p class="messageMeta">10:43 or some shit</p>
+                <div class="message sent">
+                    <p class="messageBody">{advice about the issue}</p>
+                    <p class="messageMeta">10:54</p>
                 </div>
             </div>
             <div class="sendMessageBox mousetrap" contenteditable="true"></div>
