--- a/index.html
+++ b/index.html
@@ -6,8 +6,7 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/mousetrap.js" type="text/javascript"></script>
     <script src="js/script.js" type="text/javascript"></script>
-    <script>
-    </script>
+    <script src="js/messageHandler.js" type="text/javascript"></script>
 </head>
 <body>
     <header>
@@ -15,55 +14,6 @@
     </header>
     <div id="mainBody">
         <div id="listOfMessages" class="half">
-            <div class="messageThreadPreview">
-                    <img src="img/avatar.png" class="messageImage">
-                <div class="messageContent">
-                    <h5>Sender name/number</h5>
-                    <p>Truncated content of message...</p>
-                </div>
-            </div>
-            <div class="messageThreadPreview">
-                    <img src="img/avatar.png" class="messageImage">
-                <div class="messageContent">
-                    <h5>Sender name/number</h5>
-                    <p>Truncated content of message...</p>
-                </div>
-            </div>
-            <div class="messageThreadPreview">
-                    <img src="img/avatar.png" class="messageImage">
-                <div class="messageContent">
-                    <h5>Sender name/number</h5>
-                    <p>Truncated content of message...</p>
-                </div>
-            </div>
-            <div class="messageThreadPreview">
-                    <img src="img/avatar.png" class="messageImage">
-                <div class="messageContent">
-                    <h5>Sender name/number</h5>
-                    <p>Truncated content of message...</p>
-                </div>
-            </div>
-            <div class="messageThreadPreview">
-                    <img src="img/avatar.png" class="messageImage">
-                <div class="messageContent">
-                    <h5>Sender name/number</h5>
-                    <p>Truncated content of message...</p>
-                </div>
-            </div>
-            <div class="messageThreadPreview">
-                    <img src="img/avatar.png" class="messageImage">
-                <div class="messageContent">
-                    <h5>Sender name/number</h5>
-                    <p>Truncated content of message...</p>
-                </div>
-            </div>
-            <div class="messageThreadPreview">
-                    <img src="img/avatar.png" class="messageImage">
-                <div class="messageContent">
-                    <h5>Sender name/number</h5>
-                    <p>Truncated content of message...</p>
-                </div>
-            </div>
             
         </div>
         <div id="messagePortion" class="half">
@@ -71,14 +21,6 @@
                 <h3 class="">Name/Number</h3>
             </div>
             <div class="messages">
-                <div class="message received">
-                    <p class="messageBody">I was attacked on the way along the high street today</p>
-                    <p class="messageMeta">10:43</p>
-                </div>
-                <div class="message sent">
-                    <p class="messageBody">{advice about the issue}</p>
-                    <p class="messageMeta">10:54</p>
-                </div>
             </div>
             <div class="sendMessageBox mousetrap" contenteditable="true"></div>
         </div>
