--- a/index.html
+++ b/index.html
@@ -13,16 +13,18 @@
         <h4></h4>
     </header>
     <div id="mainBody">
-        <div id="listOfMessages" class="half">
+        <div id="listOfMessages" class="leftHalf">
             
         </div>
-        <div id="messagePortion" class="half">
+        <div id="messagePortion" class="rightHalf">
             <div class="messageHeader">
                 <h3 class="">Name/Number</h3>
             </div>
             <div class="messages">
             </div>
-            <div class="sendMessageBox mousetrap" contenteditable="true"></div>
+            <div class="sendMessageContainer">
+                <div class="sendMessageBox mousetrap" contenteditable="true"></div>
+            </div>
         </div>
     </div>
 </body>
