--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <header>
-        <h4></h4>
+        <div id="logo"></div>
     </header>
     <div id="mainBody">
         <div id="listOfMessages" class="leftHalf">
@@ -18,13 +18,14 @@
         </div>
         <div id="messagePortion" class="rightHalf">
             <div class="messageHeader">
-                <h3 class="">Name/Number</h3>
+                <h3 id="nameNumber"></h3>
+                <h4>Translating: <span class="to">French</span> to <span class="to">English</span></h4>
             </div>
             <div class="messages">
             </div>
-            <div class="sendMessageContainer">
-                <div class="sendMessageBox mousetrap" contenteditable="true"></div>
-            </div>
+        </div>
+        <div class="sendMessageContainer">
+            <div class="sendMessageBox mousetrap" contenteditable="true"></div>
         </div>
     </div>
 </body>
