--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <link rel="stylesheet" href="css/style.css">
+    <link rel="icon" href="img/icon.png">
     <title>Hack Dashboard</title>
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.1.1/jquery.min.js"></script>
     <script src="js/mousetrap.js" type="text/javascript"></script>
